# passport-prover

./: .gitignore  Cargo.toml  README.md  csca_registry  rust-toolchain.toml
parsers/: README.md
parsers/kotlin/: .editorconfig  build.gradle.kts  settings.gradle.kts
parsers/kotlin/circuits/: t_add_dsc_1300_circuit.json  t_add_id_data_1300_circuit.json
parsers/kotlin/gradle/: libs.versions.toml
parsers/kotlin/scripts/: build-macos-jni.sh
parsers/kotlin/src/main/kotlin/verity/passport/prover/: Algorithm.kt  BarrettReduction.kt  Certificate.kt  CommitmentComputer.kt  Constants.kt  CscaRegistry.kt  DigestAlgorithm.kt  DscParser.kt  Main.kt  OidRegistry.kt  PassportData.kt  PassportError.kt  PassportReader.kt  Pipeline.kt  PipelineResult.kt  Poseidon2.kt  Poseidon2Constants.kt  SignatureAlgorithm.kt  Sod.kt  SodParser.kt  Types.kt  WitnessBuilder.kt  WitnessConfig.kt
parsers/rust/: Cargo.toml
parsers/rust/src/: error.rs  input_builder.rs  lib.rs  main.rs  pipeline.rs  poseidon2.rs  types.rs
parsers/swift/: Package.resolved  Package.swift
parsers/swift/Sources/PassportProver/: Main.swift
parsers/swift/Sources/PassportProverLib/: ASN1Parser.swift  BarrettReduction.swift  CommitmentComputer.swift  Constants.swift  CscaRegistry.swift  OidRegistry.swift  PassportError.swift  PassportReader.swift  Pipeline.swift  Poseidon2.swift  Poseidon2Constants.swift  SodParser.swift  Types.swift  WitnessBuilder.swift
parsers/swift/Sources/PassportProverLib/ASN1/: ASN1Parser.swift  OidRegistry.swift
parsers/swift/Sources/PassportProverLib/Crypto/: BarrettReduction.swift  Poseidon2.swift  Poseidon2Constants.swift
parsers/swift/Sources/PassportProverLib/Extensions/: Data+Extensions.swift
parsers/swift/Sources/PassportProverLib/Models/: AlgorithmTypes.swift  CMSTypes.swift  CertificateTypes.swift  PassportData.swift  PassportError.swift  Types.swift
parsers/swift/Sources/PassportProverLib/Parsing/: CscaRegistry.swift  DscParser.swift  PassportReader.swift  SodParser.swift
parsers/swift/Sources/PassportProverLib/Proving/: CommitmentComputer.swift  Pipeline.swift  WitnessBuilder.swift  WitnessTypes.swift
parsers/swift/Tests/PassportProverLibTests/: ASN1ParserTests.swift  DataExtensionsTests.swift  Poseidon2Tests.swift  WitnessEncoderTests.swift
parsers/swift/scripts/: build-macos.sh
pkp/: t_add_dsc_1300-prover.pkp  t_add_dsc_1850-prover.pkp  t_add_id_data_1300-prover.pkp  t_add_id_data_1300-verifier.pkv  t_add_id_data_1850-prover.pkp  t_add_id_data_1850-verifier.pkv  t_add_integrity_commit-prover.pkp  t_add_integrity_commit-verifier.pkv
src/: pipeline.rs  poseidon2.rs
