[package]
name = "passport-prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "passport_prover"
path = "src/lib.rs"

[[bin]]
name = "passport-prover"
path = "src/main.rs"

[dependencies]
# ProveKit workspace crates — clone https://github.com/worldfnd/provekit (branch v1)
# Set PROVEKIT_ROOT env var or place at ../../provekit relative to this repo.
passport-input-gen = { git = "https://github.com/worldfnd/provekit", branch = "rs/padding_tbs_1400", path = "playground/passport-input-gen" }
provekit-common = { git = "https://github.com/worldfnd/provekit", branch = "v1", path = "provekit/common" }
provekit-prover = { git = "https://github.com/worldfnd/provekit", branch = "v1", path = "provekit/prover" }
# Noir ABI for InputMap construction + input parsing
noirc_abi = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.11" }
# For native Poseidon2 permutation (used to compute csc_key_ne_hash)
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.11" }
acir = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.11" }

# ark-ff for PrimeField trait (used by field_to_hex)
ark-ff = "0.5"

# Only strictly needed deps — everything else comes transitively
anyhow = "1"
clap = { version = "4", features = ["derive"], default-features = false }
serde_json = "1.0"
chrono = "0.4"
hex = "0.4"

# Pin blake3 to match provekit workspace (1.8.4 breaks whir's digest traits)
blake3 = "=1.8.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.release-mobile]
inherits = "release"
opt-level = "z"
strip = true
panic = "abort"
