[package]
name = "passport-prover"
version = "0.1.0"
edition = "2021"
authors = ["Rose Jethani <rose@atheon.xyz>", "Aditya Bisht <aditya@atheon.xyz>"]

[lib]
name = "passport_prover"
path = "src/lib.rs"

[[bin]]
name = "passport-prover"
path = "src/main.rs"

[dependencies]
# ProveKit
passport-input-gen = { git = "https://github.com/worldfnd/provekit", rev = "40a6e70d6dec349dd1b30255780fc80a03797128" }
provekit-common = { git = "https://github.com/worldfnd/provekit", rev = "40a6e70d6dec349dd1b30255780fc80a03797128" }
provekit-prover = { git = "https://github.com/worldfnd/provekit", rev = "40a6e70d6dec349dd1b30255780fc80a03797128" }

# Noir
acir = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.11" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.11" }
noirc_abi = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.11" }

# Crates.io
anyhow = "1"
ark-ff = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"], default-features = false }
hex = "0.4"
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
