[package]
name = "passport-prover"
version = "0.1.0"
edition = "2021"
authors = ["Rose Jethani <rose@atheon.xyz>", "Aditya Bisht <aditya@atheon.xyz>"]

[lib]
name = "passport_prover"
path = "src/lib.rs"

[[bin]]
name = "passport-prover"
path = "src/main.rs"

[dependencies]
# ProveKit
passport-input-gen = { package = "provekit-passport-input-gen", version = "0.1.0" }
provekit-common = "0.1.1"
provekit-prover = "0.1.1"

# Noir
acir = { package = "provekit_acir", version = "1.0.0-beta.11-alpha.1" }
bn254_blackbox_solver = { package = "provekit_bn254_blackbox_solver", version = "1.0.0-beta.11-alpha.1" }
noirc_abi = { package = "provekit_noirc_abi", version = "1.0.0-beta.11-alpha.1" }

# Crates.io
anyhow = "1"
ark-ff = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"], default-features = false }
hex = "0.4"
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
